# news-topic-keyphrase-generation-model-ops

./: .gitignore  Dockerfile  README.md  bento_client.ipynb  bentofile.yaml  bentoml_configuration.yaml  checkpoints.dvc  containerize.sh  merge_and_test_bentoml.ipynb  pyproject.toml  save_bento_model.py  serve.sh  service.py  test_bentoml_clientside.ipynb  test_bentoml_service.ipynb
.old/: bentoml_configuration.yaml
