[tool.poetry]
name = "news-topic-keyphrase-generation-model-ops"
version = "0.1.0"
description = ""
authors = ["Jeonghyeon Park <dotsnangles@gmail.com>"]
readme = "README.md"
packages = [{include = "news_topic_keyphrase_generation_model_ops"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
torch = "^1.13.1"
transformers = "^4.26.1"
wandb = "^0.13.11"
rouge-score = "^0.1.2"
datasets = "^2.10.1"
mypy = "^1.1.1"
jupyterlab = "^3.6.3"
ipywidgets = "^8.0.6"
matplotlib = "^3.7.1"
papermill = "^2.4.0"
evaluate = "^0.4.0"
konlpy = "^0.6.0"
peft = "^0.3.0"
deepspeed = "^0.9.1"
accelerate = "^0.18.0"
bitsandbytes = "^0.38.1"
hydra-core = "^1.3.2"
python-dotenv = "^1.0.0"
bentoml = "^1.0.20"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "^3.1.1"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs="True"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["data", "dataset", "outputs", "runs","wandb"]

[tool.black]
line-length = 88